--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,6 @@ jobs:
       - run: npm install
       - name: Run building
         run: npm run build
-        with:
-          path: ./dist
   deploy:
     environment:
       name: github-pages
@@ -26,3 +24,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          folder: dist
