--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "ctest": "webpack t",
     "build": "webpack --mode production",
+    "deploy": "gh-pages -d dist",
     "dev": "webpack serve"
   },
   "repository": {
@@ -31,8 +32,10 @@
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "clean-webpack-plugin": "^4.0.0",
+    "cross-spawn": "^7.0.6",
     "css-loader": "^7.1.2",
     "cssnano": "^7.0.6",
+    "gh-pages": "^6.2.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.2",
     "mini-css-extract-plugin": "^2.9.1",
